// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcTable should have class ec-table-cell--center if type of content is icon 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <thead
      class="ec-table-head"
    >
      <tr>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          lorem
        </th>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          ipsum
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              bar
            
        </td>
        <td
          class="ec-table__cell ec-table__cell--center"
          data-test="ec-table__cell-2"
        >
          
              lorem
            
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              doodads
            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</div>
`;

exports[`EcTable should not render if no props are supplied 1`] = `<!---->`;

exports[`EcTable should not render if not provided with an empty array of data 1`] = `<!---->`;

exports[`EcTable should not render if not provided with any data 1`] = `<!---->`;

exports[`EcTable should render as expected if provided with data and columns 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <thead
      class="ec-table-head"
    >
      <tr>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          lorem
        </th>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          ipsum
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              bar
            
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              doodads
            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</div>
`;

exports[`EcTable should render as expected if provided with data and columns, with footer switched on 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <thead
      class="ec-table-head"
    >
      <tr>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          lorem
        </th>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          ipsum
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              bar
            
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              doodads
            
        </td>
      </tr>
    </tbody>
     
    <tfoot
      class="ec-table-footer"
    >
      <tr>
        <td
          class="ec-table-footer__cell"
          colspan="2"
        >
          <div
            class="ec-table-footer__contents"
          >
            <div
              class="ec-table-footer__details"
            >
              2 items.
            </div>
             
            <!---->
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`EcTable should render as expected if provided with data but no columns 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <!---->
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              bar
            
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              doodads
            
        </td>
      </tr>
    </tbody>
     
    <!---->
  </table>
</div>
`;

exports[`EcTable should render as expected if provided with data but no columns, and footer switched on 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <!---->
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              bar
            
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              doodads
            
        </td>
      </tr>
    </tbody>
     
    <tfoot
      class="ec-table-footer"
    >
      <tr>
        <td
          class="ec-table-footer__cell"
          colspan="2"
        >
          <div
            class="ec-table-footer__contents"
          >
            <div
              class="ec-table-footer__details"
            >
              2 items.
            </div>
             
            <!---->
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`EcTable should render as expected if provided with empty row and no columns, with footer switched on 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <!---->
     
    <tbody>
      <tr />
    </tbody>
     
    <tfoot
      class="ec-table-footer"
    >
      <tr>
        <td
          class="ec-table-footer__cell"
        >
          <div
            class="ec-table-footer__contents"
          >
            <div
              class="ec-table-footer__details"
            >
              1 item.
            </div>
             
            <!---->
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`EcTable should render as expected if provided with rows and columns, with footer switched on and the icon of the tooltip 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <thead
      class="ec-table-head"
    >
      <tr>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          lorem
        </th>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          ipsum
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              bar
            
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              doodads
            
        </td>
      </tr>
    </tbody>
     
    <tfoot
      class="ec-table-footer"
    >
      <tr>
        <td
          class="ec-table-footer__cell"
          colspan="2"
        >
          <div
            class="ec-table-footer__contents"
          >
            <div
              class="ec-table-footer__details"
            >
              2 items.
            </div>
             
            <div
              class="ec-table-footer__tooltip"
            >
              <svg
                class="ec-table-footer__tooltip-icon ec-icon ec-has-tooltip"
                data-original-title="null"
                height="16"
                width="16"
              >
                <use
                  xlink:href="#ec-simple-info"
                />
              </svg>
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`EcTable should render as expected if provided with rows and columns, with footer switched on, the icon of the tooltip and the title given 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <caption>
      Title example
    </caption>
     
    <thead
      class="ec-table-head"
    >
      <tr>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          lorem
        </th>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          ipsum
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              bar
            
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          
              doodads
            
        </td>
      </tr>
    </tbody>
     
    <tfoot
      class="ec-table-footer"
    >
      <tr>
        <td
          class="ec-table-footer__cell"
          colspan="2"
        >
          <div
            class="ec-table-footer__contents"
          >
            <div
              class="ec-table-footer__details"
            >
              2 items.
            </div>
             
            <div
              class="ec-table-footer__tooltip"
            >
              <svg
                class="ec-table-footer__tooltip-icon ec-icon ec-has-tooltip"
                data-original-title="null"
                height="16"
                width="16"
              >
                <use
                  xlink:href="#ec-simple-info"
                />
              </svg>
            </div>
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`EcTable should render slots as expected 1`] = `
<div
  class="ec-table-scroll-container"
>
  <table
    class="ec-table"
  >
    <!---->
     
    <thead
      class="ec-table-head"
    >
      <tr>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          lorem
        </th>
        <th
          class="ec-table-head__cell"
          scope="col"
        >
          ipsum
        </th>
      </tr>
    </thead>
     
    <tbody>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              foo
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          <p>
            bar
          </p>
        </td>
      </tr>
      <tr>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-0"
        >
          
              widgets
            
        </td>
        <td
          class="ec-table__cell"
          data-test="ec-table__cell-1"
        >
          <p>
            doodads
          </p>
        </td>
      </tr>
    </tbody>
     
    <tfoot
      class="ec-table-footer"
    >
      <tr>
        <td
          class="ec-table-footer__cell"
          colspan="2"
        >
          <div
            class="ec-table-footer__contents"
          >
            <div
              class="ec-table-footer__details"
            >
              2 items.
            </div>
             
            <!---->
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
